# purecrypto-tpm

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release-plz.yml
src/: crypto.rs  error.rs  lib.rs  marshal.rs  session.rs  tpm.rs
src/commands/: misc.rs  mod.rs  object.rs  pcr.rs  session.rs
src/transport/: device.rs  mod.rs  simulator.rs
src/types/: attributes.rs  constants.rs  handles.rs  mod.rs  structures.rs
tests/: simulator.rs
